# OK_grasp

./: C101.txt  CMakeLists.txt  DataLoader.cpp  DataLoader.h  DataPoint.cpp  DataPoint.h  FleetProperties.h  Graph.cpp  Graph.h  Problem.cpp  Problem.h  README.md  ResultSaver.h  Solution.cpp  Solution.h  input.txt  main.cpp  makefile  result  result.txt  utils.cpp  utils.h
ok/: DataLoader.cpp  DataPoint.cpp  DataPoint.h  FleetProperties.h  Graph.cpp  Problem.h  README.md  Solution.cpp  Solution.h  main.cpp  makefile  utils.cpp  utils.h
